# mcp-windows

./: .editorconfig  .gitignore  .runsettings  CONTRIBUTING.md  Directory.Packages.props  FEATURES.md  LICENSE  PR_SUMMARY.md  README.md  Sbroenne.WindowsMcp.sln  artifacts  build-standalone.ps1  replace-interfaces.ps1  replacement-summary.txt
tests/Sbroenne.WindowsMcp.LLM.Tests/: README.md  Run-LLMTests.ps1  Sbroenne.WindowsMcp.LLM.Tests.csproj  TestBase.cs  TestRunner.cs  conftest.py  llm-tests.config.json  llm-tests.config.schema.json  pyproject.toml  test_calculator_workflow.py  test_notepad_ui.py  test_paint_workflow.py  test_plugin_skill.py  test_plugin_skill_eval.py  test_screenshot_workflow.py  test_window_workflow.py  xunit.runner.json
tests/Sbroenne.WindowsMcp.LLM.Tests/Integration/: app-tool-uwp-test.yaml  file-dialog-test.yaml  keyboard-mouse-test.yaml  paint-ui-test.yaml  run-dialog-test.yaml  screenshot-test.yaml  window-activate-test.yaml  window-management-test.yaml
tests/Sbroenne.WindowsMcp.LLM.Tests/Scenarios/: AppParameterResolution.md  ArgumentAssertionTest.md  HandleBasedWindowManagement.md  NotepadWorkflow.md  _config-template.yaml  _config-template.yaml.template  app-tool-uwp-test.yaml  argument-assertion-test.yaml  calculator-workflow-test.yaml  file-dialog-test.yaml  handle-based-window-management.yaml  keyboard-mouse-test.yaml  notepad-test.yaml  notepad-ui-test.yaml  notepad-workflow.yaml  paint-smiley-test.yaml  paint-ui-test.yaml  paint-workflow-test.yaml  paint-workflow-test.yaml.disabled  real-world-workflows-test.yaml  run-dialog-test.yaml  screenshot-test.yaml  screenshot-workflow-test.yaml  screenshot-workflow-test.yaml.disabled  window-management-test.yaml  window-workflow-test.yaml  windows-mcp-server-test.yaml  word-test.yaml
tests/Sbroenne.WindowsMcp.LLM.Tests/eval/: README.md  test_4sysops_cursortouch.py  test_4sysops_workflow.py
tests/Sbroenne.WindowsMcp.LLM.Tests/integration/: test_app_tool_uwp.py  (+7 more)
(+612 files in other folders)
