[project]
name = "mcp-windows-llm-tests"
version = "0.1.0"
description = "LLM integration tests for Windows MCP Server using pytest-skill-engineering"
requires-python = ">=3.12"
dependencies = [
    "pytest-skill-engineering>=0.5.7",
    "pydantic-ai>=0.0.50",
    "pytest-asyncio",
    "socksio",
    "trio",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["."]
markers = [
    "llm_eval: LLM evaluation tests (skill steering A/B comparisons) — opt-in only",
]
# LLM eval tests are opt-in: they automate the live desktop and consume API quota.
# Run them explicitly with: uv run pytest -m llm_eval
addopts = "-m 'not llm_eval'"

