[project]
name = "mcp-windows-llm-tests"
version = "0.1.0"
description = "LLM integration tests for Windows MCP Server using pytest-skill-engineering"
requires-python = ">=3.12"
dependencies = [
    "pytest-skill-engineering[copilot]",
    "anyio==4.11.0",
    "pytest-asyncio",
    "socksio",
    "trio",
]

[tool.uv.sources]
pytest-skill-engineering = { git = "https://github.com/sbroenne/pytest-skill-engineering", rev = "f5f452dfd8069f8ef086750ebd3b1f5cbc9b02d4" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["."]
