[project]
name = "mcp-windows-llm-tests"
version = "0.1.0"
description = "LLM integration tests for Windows MCP Server using pytest-skill-engineering"
requires-python = ">=3.12"
dependencies = [
    "pytest-skill-engineering",
    "anyio==4.14.2",
    "pytest-asyncio",
    "socksio",
    "trio",
]

[tool.uv.sources]
pytest-skill-engineering = { git = "https://github.com/sbroenne/pytest-skill-engineering", rev = "v0.6.13" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["."]
